<resources>
    <string name="app_name">MDP_Project</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="memberList">Device List</string>
    <string name="language">Language</string>

    <string-array name="username">
        <item>Admin</item>
        <item>Andrew</item>
        <item>Steven</item>
        <item>Albertus</item>
    </string-array>

    <string-array name="password">
        <item>Admin</item>
        <item>221102614</item>
        <item>221102619</item>
        <item>221102613</item>
    </string-array>

    <string name="headerName">ROOT</string>
    <string name="headerDesc">Welcome to ROOT</string>

    <string-array name="languageDropDown">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>

    <string-array name="memberNameList">
        <item>Tamura Hono</item>
        <item>Yamashita Shizuki</item>
        <item>Tomisato Nao</item>
        <item>Yamashita Haruka</item>
        <item>Kubo Shiori</item>
        <item>Moriya Rena</item>
        <item>Shogenji Yoko</item>
    </string-array>

    <string-array name="memberGroupList">
        <item>Sakurazaka46</item>
        <item>Sakurazaka46</item>
        <item>Nogizaka46</item>
        <item>Hinatazaka46</item>
        <item>Nogizaka46</item>
        <item>Sakurazaka46</item>
        <item>Hinatazaka46</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="Share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="Register">Register</string>
    <string name="loginpage_name">Username</string>
    <string name="loginpage_password">Password</string>
    <string name="loginpage_button">Login</string>
    <string name="dasboard">Dashboard</string>
    <string name="member">Member</string>
    <string name="albert">菅原咲月推し</string>
    <string name="andrew">Andrew</string>
    <string name="peng">Steven</string>
    <string name="brightness">Brightness</string>
    <string name="add_device">Add</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="reg">Register</string>
    <string name="LCD_Text">Input LCD Text</string>
</resources>