<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/Share"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_question_mark_24"
            android:title="@string/about_us"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_arrow_outward_24"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>